@@ -1045,7 +1045,7 @@ In a normal situation,
 encoding as well as the window and icon name.
 With Xft the situation is bit different as Xft supports only iso10646-1
 and iso8859-1. If you do not specify one of these encodings in the Xft font
-name, then FVWM does strings conversion using (iii). 
+name, then FVWM does strings conversion using (iii).
 Note that with multibyte fonts (and in particular with "CJK" fonts) for
 good text rendering, the locale encoding should be the charset of the font.
 
@@ -2144,23 +2144,23 @@ a 1x1 rectangle at the mouse position.
 .in -.3i
 .BR Window
 .in +.3i
-the window with the focus.
+the frame of the context window.
 .in -.3i
 .BR Interior
 .in +.3i
-the inside of the focused window.
+the inside of the context window.
 .in -.3i
 .BR Title
 .in +.3i
-the title of the focused window or icon.
+the title of the context window or icon.
 .in -.3i
 .BR Button<n>
 .in +.3i
-button #n of the focused window.
+button #n of the context window.
 .in -.3i
 .BR Icon
 .in +.3i
-the focused icon.
+the icon of the context window.
 .in -.3i
 .BR Menu
 .in +.3i
