@@ -1,3 +1,9 @@
+2002-06-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/update.c (apply_window_updates):
+	fixed applying neverfocus to currently focused window; decorations
+	partially drawn hilighted
+
 2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menucmd.c (menu_func):
